--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,8 +98,9 @@ a{
 }
 
 input[type=text]{
-border: 0;
-outline: none;
+border: 0 !important;
+outline: none !important;
+background-color: transparent !important;
 }
 
 form{
